--- a/components/groups/groupinfo/groupinfo.scss
+++ b/components/groups/groupinfo/groupinfo.scss
@@ -20,23 +20,38 @@
 }
 
 .margin-info{
+  width: 300px;
   margin-left: 21px;
 }
 
 .actions-block{
+  position: relative;
+  top: 38px;
   height: 58px;
+  border-top: 1px solid #e7e7e7;
+
 }
 .actions-block span {
   text-transform: uppercase;
   font-weight: bold;
-  color: #b6bec9;
+  color: #4f5863;
 }
 
 .divider{
   height: 100%;
   width: 1px;
   margin: 0 20px;
-  background-color: #e7e7e7;;
+  background-color: #e7e7e7;
+}
+
+.move, .edit{
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+
+.move:hover, .edit:hover{
+  opacity: 1;
 }
 
 .edit-text{
@@ -51,9 +66,9 @@
 }
 
 .move .icon{
-  background-image: url('/static/png/garbage.png');
+  background-image: url('/static/svg/garbage.svg');
 }
 
 .edit .icon{
-  background-image: url('/static/png/edit.png');
+  background-image: url('/static/svg/edit.svg');
 }
