--- a/pages/style.scss
+++ b/pages/style.scss
@@ -1,12 +1,550 @@
-.landing-wrapper {
-  height: 100vh;
-  background-color:  grey;
-  background-repeat: no-repeat, no-repeat;
-  background-size: cover;
+
+.landing{
+  &-container {
+    background-color:  white;
+    background-repeat: no-repeat, no-repeat;
+    background-size: cover;
+
+    .landing-green-btn, .landing-white-btn{
+      padding: 10px 23px;
+      border-radius:50px;
+      border: solid 2px #22b6b6;
+      span{
+        font-family: Roboto, Helvetica, sans-serif;
+        font-size: 17px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.76;
+        letter-spacing: normal;
+        color: #ffffff;
+      }
+    }
+    .landing-green-btn{
+      padding: 10px 34px;
+      margin-left: 13px;
+      background-color: #22b6b6;
+      span{
+        color:#ffffff;
+      }
+
+      &:hover{
+
+        background-color: white;
+        span{
+          color:#22b6b6;
+        }
+      }
+    }
+    .landing-white-btn{
+
+      background-color: white;
+      span{
+        color:#22b6b6;
+      }
+      &:hover{
+        background-color: #22b6b6;
+        span{
+          color:#ffffff;
+        }
+
+      }
+    }
+
+  }
+  &-auth-btn{
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #ffffff;
+    margin-top: 15px;
+    position:relative;
+    &:after{
+      content:"";
+      position:absolute;
+      width:1px;
+      height:13px;
+      border-left: dotted 1px white;
+      top: 9px;
+      left: 106px;
+    }
+    &:first-child{
+      margin-top: 17px;
+      margin-right: 74px;
+    }
+    &:nth-child(2){
+      margin-right: 51px;
+      margin-top: 17px;
+      &:after{
+        left:99px;
+      }
+    }
+    &:last-child{
+      margin-right: 25px;
+      margin-top:16px;
+      &:after{
+        content:none;
+      }
+    }
+  }
+  &-wrapper{
+    margin: 0 auto;
+    max-width: 1168px;
+  }
+  &-header{
+    position: absolute;
+    height: 80px;
+    background-color: transparent;
+
+  }
+  &-logo{
+    width: 64px;
+    height: 60px;
+    background-image: url("/static/png/logo-image.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 8px 9px 0 24px;
+    &-title{
+      font-family: Poppins;
+      font-size: 39px;
+      font-weight: 500;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 0.77;
+      letter-spacing: normal;
+      color: #000000;
+    }
+  }
+  &-top{
+    &-container{
+      height: 100vh;
+      margin:0;
+      background-image: url("/static/png/landing-bg.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
+    &-title{
+      margin: 0;
+      padding-top: 25.5vh;
+      font-family: Poppins;
+      width: 565px;
+      line-height: 30px;
+      font-weight: normal;
+      font-size: 59px;
+      color: #191a1b;
+      letter-spacing: 1.6px;
+      line-height: 70.8px;
+      font-weight: 900;
+    }
+    &-btns-container{
+      margin-top: 43px;
+    }
+  }
+  &-title{
+    font-family: Poppins;
+    font-size: 58px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: 1.4px;
+    color: #191a1b;
+    text-transform:uppercase
+  }
+  &-description{
+    font-family: Poppins;
+    font-size: 30px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #32335f;
+  }
+
+  &-introducing{
+    &-dots-container{
+      height: 89px;
+      background-image: url("/static/png/landing-dots.png");
+    }
+    &-container{
+      .landing-title{
+        transform: translateY(34px);
+      }
+
+      .landing-introducing-top{
+        .landing-description{
+          width: 501px;
+          margin-top: 271px;
+          margin-left: 86.8px;
+          line-height: 37px;
+          letter-spacing: 0.1px;
+        }
+      }
+      .landing-introducing-bottom{
+        .landing-description{
+          width: 569px;
+          margin-left: 58.2px;
+          margin-top: 219px;
+          line-height: 41px;
+          letter-spacing: normal;
+
+          margin-bottom: 17px;
+        }
+        .landing-green-btn {
+          padding: 11.8px 28px;
+          margin-left: 57px;
+          width: 205px;
+        }
+      }
+    }
+
+    &-left-img{
+      margin-top: 81px;
+      width: 442.5px;
+      height: 542px;
+      margin-left: 7px;
+    }
+    &-right-img{
+      width: 455px;
+      margin-left: 77px;
+      margin-top: 26px;
+      height: 569px;
+    }
+  }
+
+  &-advantages-container{
+    height: 681px;
+    background-color:rgba(34, 182, 182, 0.33);
+    display: flex;
+  }
+
+  &-video{
+    height: 465px;
+    &-container{
+      .landing-title {
+        margin: 58px 0 0;
+        transform: translateY(-2px);
+      }
+    }
+
+    .video-react{
+      margin: 0 auto;
+    }
+
+    &-dots-container{
+      height: 89px;
+      background-image: url("/static/png/landing-dots.png");
+    }
+  }
+
+  &-advantage{
+    width: 20%;
+
+    &-title{
+      font-family: Poppins;
+      font-size: 70px;
+      font-weight: 500;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 0.37;
+      letter-spacing: normal;
+      color: #ffffff;
+      margin-top: 286px;
+      margin-bottom: 36px;
+      margin-left: 42px;
+    }
+    &-description{
+      font-family: Poppins;
+      font-size: 16px;
+      font-weight: 300;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      color: #ffffff;
+      max-width: 242px;
+    }
+  }
+  &-responses{
+    &-title{
+      font-family: Poppins;
+      font-size: 48px;
+      font-weight: normal;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      color: #191a1b;
+      text-align:center;
+      margin: 159px auto 67px;
+    }
+   &-wrapper{
+     margin: 0 auto;
+     display: flex;
+     justify-content: space-between;
+   }
+    &-container{
+      padding-bottom: 151px;
+      position: relative;
+    }
+    &-circle{
+      position: absolute;
+      width: 912px;
+      height: 912px;
+      overflow: hidden;
+      left: -257px;
+      bottom: 123px;
+      transform: rotate(28deg);
+      &:after{
+        content: '';
+        position: absolute;
+        width: 912px;
+        background-color: #22b6b6;
+        bottom: -50%;
+        border-radius: 100%;
+        height: 912px;
+      }
+      &:before{
+        content: '';
+        position: absolute;
+        width: 250px;
+        height: 250px;
+        background-color: white;
+        bottom: 0%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        border-radius: 100%;
+        z-index: 2;
+      }
+    }
+
+  }
+  &-response{
+    max-width:366px;
+    min-height:222px;
+    box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 2;
+    background-color: white;
+    &-triangle{
+      z-index: 1;
+      width: 84px;
+      height: 82px;
+      position: absolute;
+      overflow: hidden;
+      bottom: -30px;
+      left: -57.4px;
+      transform: rotate(-33deg);
+      &:after{
+        content: "";
+        position: absolute;
+        width: 41px;
+        height: 32px;
+        background: white;
+        transform: rotate(33deg);
+        top: 67px;
+        left: 37px;
+        box-shadow: 0px 4px 10px -2px rgba(0, 0, 0, 0.5);
+      }
+    }
+
+    &-title{
+      font-family: Lato;
+      font-size: 17px;
+      font-weight: 300;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.53;
+      letter-spacing: normal;
+      color: #666c77;
+      margin: 17.5px 26px 0 26px;
+    }
+    &-author{
+      font-family: Lato;
+      font-size: 17px;
+      font-weight: bold;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.53;
+      letter-spacing: 0.4px;
+      color: #344554;
+      margin: 40.5px 0 0 19px;
+    }
+    &-icon{
+      margin-left:auto;
+    }
+    &:nth-child(1){
+      transform: translateY(-31px);
+      .landing-response-author {
+        margin: 13.5px 0 0 25px;
+
+      }
+
+      .landing-response-icon{
+        width: 55px;
+        height: 55px;
+        margin-right:1px
+      }
+    }
+    &:nth-child(2){
+      .landing-response-author {
+        margin: 15.5px 0 0 27px;
+
+      }
+      .landing-response-icon{
+        width: 87px;
+        height: 27px;
+        margin-top: 16px;
+        margin-right: 13px;
+      }
+    }
+    &:nth-child(3){
+      .landing-response-author{
+        margin: 41.5px 0 0 25px;
+      }
+      .landing-response-icon{
+        width:61px;
+        height:61px;
+        margin-right: 11px;
+        margin-top: 25px;
+      }
+    }
+  }
+
+  &-contact-us{
+    &-container{
+      background-color: #f3f6fd;
+      padding-bottom: 28px;
+    }
+    &-title{
+      font-family: Poppins;
+      font-size: 41px;
+      font-weight: 500;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 0.73;
+      letter-spacing: normal;
+      color: #191a1b;
+      margin: 66.5px auto 18px;
+      text-align: center;
+      padding-top: 58px;
+    }
+    &-text{
+      font-family: Poppins;
+      text-align: center;
+      font-size: 23px;
+      font-weight: 300;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.3;
+      letter-spacing: normal;
+      color: #191a1b;
+      margin: 23px auto 0;
+    }
+    &-wrapper{
+      display: flex;
+      margin-top: 39.5px;
+      justify-content:space-around;
+    }
+    &-item{
+      max-width:269px;
+      &-text{
+        font-family: Poppins;
+        font-size: 18px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.44;
+        letter-spacing: normal;
+        text-align: center;
+        color: #191a1b;
+
+      }
+      &-icon{
+        display:block !important;
+        margin: 0 auto;
+      }
+      &:first-child{
+        .landing-contact-us-item-text {
+
+          margin-top: 4px;
+        }
+        .landing-contact-us-item-icon {
+          width: 4.9em;
+          height: 3.8em;
+          font-size: 15.5px;
+        }
+      }
+      &:nth-child(2){
+        .landing-contact-us-item-text {
+
+          margin-top: 6px;
+        }
+        .landing-contact-us-item-icon {
+          width: 4.9em;
+          height: 3.8em;
+          font-size: 15.5px;
+        }
+      }
+      &:last-child{
+        .landing-contact-us-item-text {
+
+          margin-top: 4px;
+        }
+        .landing-contact-us-item-icon {
+          width: 6.9em;
+          height: 3.6em;
+          font-size: 15.5px;
+          margin-top: 7px;
+        }
+      }
+    }
+  }
+  &-footer{
+    &-container{
+      height: 80px;
+      background-color: #1c3d77;
+    }
+    &-link, &-copyright{
+      font-family: Poppins;
+      font-size: 15px;
+      font-weight: 300;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.73;
+      letter-spacing: normal;
+      color: #ffffff;
+
+      margin-top: 27px;
+    }
+    &-link{
+      text-decoration: none;
+
+      &:first-child{
+        margin-left: 41px;
+        margin-right: 52px;
+      }
+    }
+    &-copyright{
+      margin-left: auto;
+      margin-right: 34px;
+    }
+  }
+
 }
 
+
+
+
 @media (max-width: 480px) {
-  .landing-wrapper {
+  .landing-container {
     background-color:  grey;
   }
 }
