display list of members according to design

--- a/pages/home/manage-groups/group/group.sass
+++ b/pages/home/manage-groups/group/group.sass
@@ -1,5 +1,6 @@
 .underheader-wrapper
   .custom-button
-    text-align: center
+    padding: 0px 20px 0px 0px
+    text-align: right
     .custom-button-material
       display: inline
