fixed styles in futures

--- a/components/features/features.sass
+++ b/components/features/features.sass
@@ -81,14 +81,14 @@
       border: 1px #ff6f00 solid
       border-radius: 30px
       .user-activity-chat-signature
-        font-family: Muli;
-        font-size: 14px;
-        font-weight: bold;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        color: #ff6f00;
+        font-family: Muli
+        font-size: 14px
+        font-weight: bold
+        font-style: normal
+        font-stretch: normal
+        line-height: normal
+        letter-spacing: normal
+        color: #ff6f00
   .field-search, .field-sort
     width: 300px
     text-decoration: none
@@ -155,5 +155,5 @@
               text-align: center
               color: #ffffff
             .info-member-title
-              opacity: 0.8;
-              font-size: 18px;
+              opacity: 0.8
+              font-size: 18px
