--- a/components/features/features.sass
+++ b/components/features/features.sass
@@ -39,7 +39,7 @@
       line-height: normal
       letter-spacing: normal
       color: #9e9e9e
-  .field-search, .field-sort
+  .field-search, .field-sort, .field-select
     width: 300px
     text-decoration: none
     padding: 0px 15px
@@ -95,6 +95,7 @@
     padding: 0px 15px
     background-color: #f3f5f7
     border-radius: 2px
+    border: 1px solid #b7b8bc
     .field-search-input
       font-family: Muli
       font-size: 15px
