--- a/components/features/features.sass
+++ b/components/features/features.sass
@@ -43,7 +43,7 @@
     width: 300px
     text-decoration: none
     padding: 0px 15px
-    background-color: #f3f5f7
+    background-color: white
     border-radius: 2px
     .field-search-input
       font-family: Muli
