added sort by && loading && link

--- a/components/features/features.sass
+++ b/components/features/features.sass
@@ -21,6 +21,7 @@
   .group
     .name
       display: inline
+      vertical-align: middle
       font-family: Muli
       font-size: 24px
       font-weight: bold
@@ -89,7 +90,7 @@
         line-height: normal
         letter-spacing: normal
         color: #ff6f00
-  .field-search, .field-sort
+  .field-search, .field-sort , .field-select
     width: 300px
     text-decoration: none
     padding: 0px 15px
