--- a/components/groups/gallery/gallery.sass
+++ b/components/groups/gallery/gallery.sass
@@ -13,4 +13,8 @@
 .slick-list
   margin-left: 15px
 .slick-slide
+  cursor: pointer
   margin: 0 15px
+.slick-slide, .slick-slide *
+  outline: none !important;
+  margin: 5
