fixed bread crumbs

--- a/components/secondpanel/breadcrumbs/breadcrumbs.sass
+++ b/components/secondpanel/breadcrumbs/breadcrumbs.sass
@@ -1,9 +1,7 @@
 .breadcrumbs-wrapper
-  .title-chunk-parrent
+  .title-chunk
     display: inline
     cursor: pointer
     &:hover
       text-decoration: underline
       color: #224483
-  .title-chunk-child
-    display: inline
