fixed link to privacy policy in footer

--- a/components/footer/footer.sass
+++ b/components/footer/footer.sass
@@ -23,6 +23,10 @@
         background-color: #fff
         width: 1.5px
         height: 15px
+        margin: 0 20px
+
+  .footer-link
+    cursor: pointer
   .copyright
     margin-top: 10px
     height: 52px
