feat(submanagegroups): Added redirect to subgroup

--- a/sass/common.sass
+++ b/sass/common.sass
@@ -1,48 +1,35 @@
 $accent: #ff6f00;
 $radius: 50px;
 
-.d-flex{
+.d-flex
     display: flex
-}
 
-.mr-auto{
+.mr-auto
     margin-right: auto;
-}
 
-.ml-auto{
+.ml-auto
     margin-left: auto;
-}
-.ai-center{
+.ai-center
     align-items: center;
-}
 
-.accent-background{
+.accent-background
     background-color: $accent;
-}
 
-.round-radius{
+.round-radius
     border-radius: $radius;
-}
 
-.jcc{
+.jcc
     justify-content: center;
-}
 
-.f-column{
+.f-column
     flex-direction: column;
-}
 
-.f-row{
+.f-row
     flex-direction: row;
-}
 
-.ase{
+.ase
     align-self: flex-end;
-}
-.border-right{
+.border-right
     border-right: 1px solid #e7e7e7;
-}
-
-.jcsb{
+.jcsb
     justify-content: space-between;
-}
