feat(styleSearch+modalCloseBtn)

--- a/components/groups/gallery/modal.sass
+++ b/components/groups/gallery/modal.sass
@@ -41,3 +41,8 @@
             font-size: 22pt
             font-weight: 400
             color: rgba(0,0,0,0.6)
+    .close-btn
+        position: absolute
+        top: 25px
+        left: 40px
+        z-index: 10000
