--- a/components/features/features.sass
+++ b/components/features/features.sass
@@ -47,6 +47,8 @@
     background-color: white
     border-radius: 2px
     .field-search-input
+      margin: 0% 0% 0% 30%
+      width: 70%
       font-family: Muli
       font-size: 15px
       font-weight: normal
@@ -98,6 +100,8 @@
     border-radius: 2px
     border: 1px solid #b7b8bc
     .field-search-input
+      margin: 0% 0% 0% 30%
+      width: 70%
       font-family: Muli
       font-size: 15px
       font-weight: normal
