--- a/pages/style.sass
+++ b/pages/style.sass
@@ -1,8 +1,12 @@
+@import './mixins.sass'
+
 .landing
   &-container
     background-color: white
     background-repeat: no-repeat, no-repeat
     background-size: cover
+    .landing-menu
+      display: none
     .landing-green-btn,
     .landing-white-btn
       padding: 10px 23px
@@ -75,6 +79,11 @@
     position: absolute
     height: 80px
     background-color: transparent
+    width: 100%
+    +flex(null, space-between)
+  &-auth-container
+    +flex()
+    flex-wrap: no-wrap
   &-logo
     width: 64px
     height: 60px
@@ -83,6 +92,9 @@
     background-position: center
     background-size: cover
     margin: 8px 9px 0 24px
+    &-container
+      +flex()
+
     &-title
       font-family: Poppins
       font-size: 39px
@@ -114,6 +126,7 @@
       font-weight: 900
     &-btns-container
       margin-top: 43px
+      +flex(null, flex-start)
   &-title
     font-family: Poppins
     font-size: 58px
@@ -134,6 +147,14 @@
     letter-spacing: normal
     color: #32335f
   &-introducing
+    &-top,
+    &-bottom
+      +flex()
+      flex-wrap: nowrap
+
+      &-text-container
+        +flex(column, flex-start)
+
     &-dots-container
       height: 89px
       background-image: url("/static/png/landing-dots.png")
@@ -144,7 +165,7 @@
         .landing-description
           width: 501px
           margin-top: 271px
-          margin-left: 86.8px
+          margin-left: auto
           line-height: 37px
           letter-spacing: 0.1px
       .landing-introducing-bottom
@@ -166,7 +187,7 @@
       margin-left: 7px
     &-right-img
       width: 455px
-      margin-left: 77px
+      margin-left: auto
       margin-top: 26px
       height: 569px
   &-advantages-container
@@ -176,7 +197,7 @@
     background-size: cover
     background-position: center
     position: relative
-    display: flex
+    +flex()
     &:after
       content: ''
       position: absolute
@@ -199,6 +220,9 @@
   &-advantage
     width: 20%
     position: relative
+    &:first-child
+      .landing-advantage-description
+        padding: 0 55px
     &:not(:last-child):after
       content: ''
       position: absolute
@@ -217,9 +241,8 @@
       line-height: 0.37
       letter-spacing: normal
       color: #ffffff
-      margin-top: 286px
-      margin-bottom: 36px
-      margin-left: 42px
+      margin: 286px auto 36px
+      text-align: center
     &-description
       font-family: Poppins
       font-size: 16px
@@ -229,7 +252,8 @@
       line-height: normal
       letter-spacing: normal
       color: #ffffff
-      max-width: 242px
+      width: 100%
+      padding: 0 35px
       margin: 0 auto
   &-responses
     &-title
@@ -284,6 +308,8 @@
     position: relative
     z-index: 2
     background-color: white
+    &-bottom
+      +flex(null, null, initial)
     &-triangle
       z-index: 1
       width: 84px
@@ -327,6 +353,8 @@
       margin-left: auto
     &:nth-child(1)
       transform: translateY(-31px)
+      min-height: 202px
+      height: 202px
       .landing-response-author
         margin: 13.5px 0 0 25px
       .landing-response-icon
@@ -380,8 +408,13 @@
       display: flex
       margin-top: 39.5px
       justify-content: space-around
+
+      a
+        text-decoration: none
+
     &-item
-      max-width: 269px
+      min-width: 269px
+      width: 269px
       &-text
         font-family: Poppins
         font-size: 18px
@@ -422,6 +455,7 @@
     &-container
       height: 80px
       background-color: #1c3d77
+      +flex(null, null, initial)
     &-link,
     &-copyright
       font-family: Poppins
@@ -441,3 +475,398 @@
     &-copyright
       margin-left: auto
       margin-right: 34px
+
+@media screen and (max-width: 960px)
+  .landing
+    &-container
+      background-color: white
+      background-repeat: no-repeat, no-repeat
+      background-size: cover
+      .landing-menu
+        display: inline-flex
+        margin: 8px 16px 0 0
+      .landing-hamburger
+        width: 35px
+        height: 35px
+        color: white
+      .landing-green-btn,
+      .landing-white-btn
+        width: 277px
+        height: 48px
+        font-weight: bold
+      .landing-green-btn
+        margin-left: initial
+        margin-top: 24px
+    &-auth-btn
+      display: none
+    &-wrapper
+      margin: 0 auto
+      width: 90%
+    &-header
+      position: fixed
+      height: 62px
+      background-color: #1c3d77
+      z-index: 50
+      +flex(null, space-between)
+    &-auth-container
+      +flex()
+      flex-wrap: nowrap
+    &-logo
+      width: 48px
+      height: 45px
+      background-image: url("/static/png/logo-image.png")
+      margin: 8px 0px 8px 20px
+      &-container
+        +flex()
+
+      &-title
+        display: none
+    &-top
+      &-container
+        background-position: 69%
+      &-title
+          margin: 0 auto
+          max-width: 280px
+          padding-top: 25.5vh
+          font-size: 28px
+          line-height: 1.29
+          text-align: center
+          color: white
+      &-btns-container
+        margin-top: 43px
+        +flex(column, center, center)
+    &-title
+      font-size: 28px
+      text-align: center
+
+    &-description
+      font-family: Poppins
+      font-size: 30px
+      color: #32335f
+    &-introducing
+      &-top,
+      &-bottom
+        +flex(column)
+        flex-wrap: nowrap
+
+        &-text-container
+          order: 1
+          +flex(column, flex-start)
+
+      &-dots-container
+        height: 89px
+        background-image: url("/static/png/landing-dots.png")
+      &-container
+        .landing-title
+        transform: translateY(34px)
+        .landing-introducing-top
+          .landing-description
+            width: 100%
+            margin-top: 48px
+            margin-left: auto
+            text-align: center
+            font-size: 20px
+            line-height: 1.35
+        .landing-introducing-bottom
+          .landing-description
+            width: 100%
+            margin-left: auto
+            margin-top: 48px
+            margin-bottom: 0
+            text-align: center
+            font-size: 20px
+            line-height: 1.35
+          .landing-green-btn
+            padding: 10px 23px
+            margin: 48px  auto 27px
+            width: 205px
+      &-left-img
+        margin-top: 48px
+        width: 100%
+        height: auto
+        margin-left: initial
+      &-right-img
+        width: 100%
+        height: auto
+        margin-left: auto
+        margin-top: 48px
+    &-advantages-container
+      height: auto
+      background-image: url("/static/jpg/landeeng-adnantages-bg.jpg")
+      background-repeat: no-repeat
+      background-size: cover
+      background-position: center
+      position: relative
+      +flex(column)
+      &:after
+        content: ''
+        position: absolute
+        left: 0
+        right: 0
+        top: 0
+        bottom: 0
+        background-color: transparent
+    &-video
+      height: auto
+      &-container
+        .landing-title
+          margin: 58px 0 0
+          transform: translateY(34px)
+      .video-react
+        margin: 0 auto
+        width: 100% !important
+        height: calc(100vw / 1.9) !important
+      &-dots-container
+        height: 89px
+        background-image: url("/static/png/landing-dots.png")
+    &-advantage
+      width: 100%
+      height: auto
+      position: relative
+      background-color: rgba(0, 255, 255, 0.4)
+      &:first-child
+        .landing-advantage-description
+          padding: 0
+      &:not(:last-child):after
+        content: ''
+        position: absolute
+        right: 0
+        top: initial
+        bottom: 0
+        height: 4px
+        width: 100%
+        background-color: #ffffff
+      &-title
+        font-family: Poppins
+        font-size: 40px
+        font-weight: 500
+        font-style: normal
+        font-stretch: normal
+        line-height: 0.37
+        letter-spacing: normal
+        color: #ffffff
+        margin: 48px auto 48px
+        text-align: center
+      &-description
+        font-family: Poppins
+        font-size: 21px
+        font-weight: 400
+        text-align: center
+        color: #ffffff
+        width: 100%
+        padding: 0 5vw
+        margin: 0 auto 48px
+    &-responses
+      &-title
+        font-size: 28px
+        margin: 48px auto 48px
+        max-width: 210px
+      &-wrapper
+        margin: 0 auto
+        +flex(column)
+      &-container
+        padding-bottom: 0
+        position: relative
+      &-circle
+        display: none
+        position: absolute
+        width: 912px
+        height: 912px
+        overflow: hidden
+        left: -257px
+        bottom: 123px
+        transform: rotate(28deg)
+        &:after
+          content: ''
+          position: absolute
+          width: 912px
+          background-color: #22b6b6
+          bottom: -50%
+          border-radius: 100%
+          height: 912px
+        &:before
+          content: ''
+          position: absolute
+          width: 250px
+          height: 250px
+          background-color: white
+          bottom: 0%
+          left: 50%
+          transform: translate(-50%, 50%)
+          border-radius: 100%
+          z-index: 2
+    &-response
+      width: 90%
+      min-height: 222px
+      box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.1)
+      position: relative
+      z-index: 2
+      background-color: white
+      margin: 0 auto 64px
+      height: auto !important
+      &-bottom
+        +flex(null, null, initial)
+      &-triangle
+        z-index: 1
+        width: 84px
+        height: 82px
+        position: absolute
+        overflow: hidden
+        bottom: -30px
+        left: -57.4px
+        transform: rotate(-33deg)
+        &:after
+          content: ''
+          position: absolute
+          width: 41px
+          height: 32px
+          background: white
+          transform: rotate(33deg)
+          top: 67px
+          left: 37px
+          box-shadow: 0px 4px 10px -2px rgba(0, 0, 0, 0.5)
+      &-title
+        font-family: Lato
+        font-size: 17px
+        font-weight: 300
+        font-style: normal
+        font-stretch: normal
+        line-height: 1.53
+        letter-spacing: normal
+        color: #666c77
+        margin: 17.5px 26px 0 26px
+        text-align: justify
+      &-author
+        font-family: Lato
+        font-size: 17px
+        font-weight: bold
+        font-style: normal
+        font-stretch: normal
+        line-height: 1.53
+        letter-spacing: 0.4px
+        color: #344554
+        margin: 40.5px 0 40.5px 19px
+        max-width: 112px
+      &-icon
+        margin-left: auto
+      &:nth-child(1)
+        transform: none
+        min-height: 202px
+        height: 202px
+        .landing-response-author
+          margin: 13.5px 0 13.5px 25px
+        .landing-response-icon
+          width: 55px
+          height: 55px
+          margin-right: 1px
+          margin-top: 10px
+      &:nth-child(2)
+        .landing-response-author
+          margin: 15.5px 0 15.5px 27px
+        .landing-response-icon
+          width: 87px
+          height: 27px
+          margin-top: 29px
+          margin-right: 13px
+      &:nth-child(3)
+        .landing-response-author
+          margin: 15.5px 0 15.5px 25px
+        .landing-response-icon
+          width: 61px
+          height: 61px
+          margin-right: 11px
+          margin-top: 9px
+    &-contact-us
+      &-container
+        background-color: #f3f6fd
+        padding-bottom: 28px
+      &-title
+        font-family: Poppins
+        font-size: 28px
+        font-weight: 500
+        font-style: normal
+        font-stretch: normal
+        line-height: 0.73
+        letter-spacing: normal
+        color: #191a1b
+        margin: 0 auto 32px
+        text-align: center
+        padding-top: 48px
+      &-text
+        font-family: Poppins
+        text-align: center
+        font-size: 20px
+        font-weight: 300
+        font-style: normal
+        font-stretch: normal
+        line-height: 1.3
+        letter-spacing: normal
+        color: #191a1b
+        margin: 23px auto -34px
+        max-width: 250px
+      &-wrapper
+        +flex(column, center, center)
+        margin-top: 48px
+
+      &-item
+        min-width: 269px
+        width: 269px
+        &-text
+          font-family: Poppins
+          font-size: 18px
+          font-weight: 300
+          font-style: normal
+          font-stretch: normal
+          line-height: 1.44
+          letter-spacing: normal
+          text-align: center
+          color: #191a1b
+        &-icon
+          display: block !important
+          margin: 0 auto
+        &:first-child
+          .landing-contact-us-item-text
+            margin-top: 4px
+          .landing-contact-us-item-icon
+            width: 4.9em
+            height: 3.8em
+            font-size: 15.5px
+        &:nth-child(2)
+          .landing-contact-us-item-text
+            margin-top: 6px
+          .landing-contact-us-item-icon
+            width: 4.9em
+            height: 3.8em
+            font-size: 15.5px
+        &:last-child
+          .landing-contact-us-item-text
+            margin-top: 4px
+          .landing-contact-us-item-icon
+            width: 6.9em
+            height: 3.6em
+            font-size: 15.5px
+            margin-top: 7px
+            color: black
+    &-footer
+      &-container
+        height: auto
+        +flex(column, center, center)
+      &-link,
+      &-copyright
+        font-family: Poppins
+        font-size: 18px
+        font-weight: 500
+        font-style: normal
+        font-stretch: normal
+        line-height: 1.73
+        letter-spacing: normal
+        color: #ffffff
+        margin: 16px auto 16px
+      &-link
+        text-decoration: none
+        &:first-child
+          margin-left: auto
+          margin-right: auto
+      &-copyright
+        margin-left: auto
+        margin-right: auto
