search drop filter

--- a/pages/manage-groups/user-activity-chart/user-activity-chart.sass
+++ b/pages/manage-groups/user-activity-chart/user-activity-chart.sass
@@ -30,6 +30,8 @@
           content: none
           border: none
           position: relative
+        .endAdornment-search-clear
+          cursor: pointer
     .title-button
       font-family: Muli
       font-size: 14px
