Revert "Added laptop to landing"
This reverts commit 0f23a6084cca4d4318513a139c3ee9a7c2ba54c0.

--- a/pages/style.sass
+++ b/pages/style.sass
@@ -47,7 +47,7 @@
     font-stretch: normal
     line-height: 1.5
     letter-spacing: normal
-    color: black
+    color: #ffffff
     margin-top: 15px
     position: relative
     cursor: pointer
@@ -106,14 +106,15 @@
       color: #000000
   &-top
     &-container
-      height: 80vh
+      height: 100vh
       margin: 0
+      background-image: url("/static/png/landing-bg.png")
       background-repeat: no-repeat
       background-position: center
       background-size: cover
     &-title
       margin: 0
-      padding-top: 15.5vh
+      padding-top: 25.5vh
       font-family: Poppins
       width: 565px
       line-height: 30px
@@ -123,14 +124,6 @@
       letter-spacing: 1.6px
       line-height: 70.8px
       font-weight: 900
-    &-screenshot
-      margin: 0
-      padding-top: 20.5vh
-      line-height: 30px
-      width: 565px
-      background-repeat: no-repeat
-      background-position: center
-      background-size: cover
     &-btns-container
       margin-top: 43px
       +flex(null, flex-start)
@@ -247,7 +240,7 @@
       font-stretch: normal
       line-height: 0.37
       letter-spacing: normal
-      color: #black
+      color: #ffffff
       margin: 286px auto 36px
       text-align: center
     &-description
