--- a/components/material-wrap/button/buttonStyle.sass
+++ b/components/material-wrap/button/buttonStyle.sass
@@ -1,9 +1,9 @@
 .def-mp-button
   border-color: black !important
-  background-color: white
+  background-color: #ff6f00 !important
   &:hover
-    background-color: #224483 !important
-    border-color: #224483 !important
+    background-color: #ff6f00 !important
+    border-color: #ff6f00 !important
     color: white !important
     span
       color: white !important
