added header for manage froups
tratata

asdasd

added another pages

--- a/components/activitychart/button/style.sass
+++ b/components/activitychart/button/style.sass
@@ -6,3 +6,11 @@
 .button:hover
     #sect
         fill: #fff
+
+
+@media screen and (max-width: 960px)
+    .button
+        width: 34px
+        height: 34px
+        min-width: 34px !important
+        min-height: 34px !important
