--- a/components/customTable/customTable.sass
+++ b/components/customTable/customTable.sass
@@ -27,3 +27,11 @@
   line-height: 1.67
   letter-spacing: normal
   color: #b6bec9
+
+
+@media screen and (max-width: 960px)
+  .table-pagination > div
+    flex-wrap: wrap
+    height: auto
+    & >div:last-child
+      margin-left: auto
