--- a/components/footer/footer.sass
+++ b/components/footer/footer.sass
@@ -37,3 +37,36 @@
       text-transform: uppercase
       font-size: 15px
   
+@media screen and (max-width: 960px)
+  .footer-wrapped
+    display: flex
+    flex-direction: column
+    height: auto
+    padding: 0
+
+    .copyright
+      margin-top: 0
+      height: auto
+
+    h2
+      font-size: 16px !important
+      padding: 16px 0
+
+    .divider
+      display: none
+
+    .main
+      border-bottom: none
+      height: auto
+      padding: 0
+
+      .policy
+        height: auto
+        margin-right: auto
+
+    .logo-container
+      display: none
+
+    .d-flex
+      flex-direction: column
+      justify-content: center
