--- a/components/groups/gallery/gallery.sass
+++ b/components/groups/gallery/gallery.sass
@@ -18,3 +18,15 @@
 .slick-slide, .slick-slide *
   outline: none !important;
   margin: 5
+
+.gallery-container
+  width: calc(100% - 440px) !important
+  margin-left: 25px !important
+
+@media screen and (max-width: 960px)
+  .gallery-container
+    width: 100% !important
+    margin-left: 0 !important
+
+  .slick-slide
+    margin: 15px 15px 0
