--- a/components/groups/groupinfo/groupinfo.sass
+++ b/components/groups/groupinfo/groupinfo.sass
@@ -58,3 +58,22 @@
 
 .edit .icon
   background-image: url("/static/svg/edit.svg")
+
+@media screen and (max-width: 960px)
+  .icon
+    margin-right: 2px
+    top: -3px !important
+
+  .actions-block.d-flex
+    display: none
+
+  .group-info-wrapper
+    padding-top: 0
+
+  .margin-info
+    width: auto
+    margin-left: 12px
+    padding-top: 0
+
+    h3
+      font-size: 15px
