--- a/components/questions/style.sass
+++ b/components/questions/style.sass
@@ -23,6 +23,19 @@
       border: 1px solid rgba(0, 0, 0, 0.12)
       margin-bottom: 15px
 
+@media (max-width:960px)
+  .questions-wrapper
+    min-height: calc(100vh - 268px)
+
+    .questions
+      &-container
+        background-color: white
+        padding: 45px 30px
+        min-width: auto
+        width: 100%
+        height: max-content
+        margin: 40px auto 40px
+
 
 
 
