--- a/components/groupQuestions/style.sass
+++ b/components/groupQuestions/style.sass
@@ -26,4 +26,18 @@
     &-label
       padding-right: 96px
 
+@media (max-width:960px)
+  .group-questions-wrapper
+    min-height: calc(100vh - 268px)
+    background-color: #e7e7e7
+    padding: 40px 0
 
+    .group-questions
+      &-container
+        background-color: white
+        padding: 45px 30px
+        min-width: auto
+        width: 100%
+        margin: 0 auto 40px
+        display: flex
+        flex-direction: column
