--- a/components/profile/style.sass
+++ b/components/profile/style.sass
@@ -194,3 +194,157 @@
 
         &:hover
           background-color: rgba(42, 184, 184, 1)
+
+@media (max-width:960px)
+  .profile
+    &-title
+      margin: 20px 0 15px 0
+      font-family: Muli
+      font-size: 19px
+      font-weight: 600
+      font-style: normal
+      font-stretch: normal
+      line-height: normal
+      letter-spacing: normal
+      color: #5f6368
+    &-genders-container
+      display: flex
+    &-input-title
+      font-family: Muli
+      font-size: 15px
+      font-weight: 600
+      font-style: normal
+      font-stretch: normal
+      line-height: normal
+      letter-spacing: normal
+      color: #a3abb5
+      margin-bottom: 14px
+      margin-top: 21px
+    &-gender
+      font-family: Muli
+      font-size: 19px
+      font-weight: 600
+      font-style: normal
+      font-stretch: normal
+      line-height: normal
+      letter-spacing: normal
+      color: #a3abb5
+      vertical-align: middle
+      cursor: pointer
+      max-width: 113px
+      margin: 0
+
+      &:first-child
+        margin-right: 50px
+
+      img
+        margin-right: 12px
+        vertical-align: middle
+    &-action
+      text-align: center
+
+      &:hover
+        opacity: 1
+
+      &:nth-child(3)
+        margin-top: 14px
+
+      &-img
+        width: 19px
+        height: 19px
+        vertical-align: bottom
+        margin-right: 12px
+        display: inline
+
+      &-edit-img
+        mask: url(/static/svg/edit.svg)
+
+      &-remove-img
+        mask: url(/static/svg/garbage.svg) center / contain no-repeat
+
+    &-img
+      width: 130px
+      height: 130px
+      margin-right: 0
+    &-btns-container
+      justify-content: center
+
+    &-modal
+      &-wrapper
+        width: calc(100vw - 45px)
+        min-height: 300px;
+        background-color: white;
+        outline: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+
+      &-title
+        font-family: "Roboto";
+        font-size: 25px
+        font-weight: 500
+        color: rgba(32, 67, 133, 1)
+        text-align: center
+        letter-spacing: -0.04em
+        margin: 0
+        padding-top: 30px
+
+      &-description
+        font-family: 'Roboto'
+        font-size: 16px
+        color: rgba(32, 67, 133, 0.6)
+        text-align: center
+        letter-spacing: -0.02em
+        line-height: 22px
+        margin-top: 5px
+        font-weight: 600
+        max-width: 260px
+        margin: 5px auto
+
+      &-divider
+        height: 15px;
+        background-color: white;
+        box-shadow: 0px 2px 4px 0px rgba(32, 67, 133, 0.08);
+      &-btns-container
+        padding: 15px 45px 30px
+        display: flex
+        justify-content: flex-end
+        flex-direcition: column
+
+      &-crop-container
+        max-width: 800px
+        display: flex
+        max-height: 340px
+        margin: 0 auto
+        justify-content: center
+        margin-top: 20px
+        width: calc(100% - 30px)
+      &-btn
+        height: 42px
+        border-radius: 2px
+        width: 160px
+
+        span
+          text-transform: none
+          color: #fff
+          font-size: 17px
+          font-weight: bold
+          text-align: center
+          line-height: 16px
+          font-family: 'Roboto'
+
+        &.profile-modal-btn-back
+          margin-right: 10px
+          background-color: rgba(42, 184, 184, 1)
+
+          &:hover
+            background-color: rgba(32, 67, 133, 1)
+
+        &.profile-modal-btn-save
+          background-color: rgba(32, 67, 133, 1)
+
+          &:hover
+            background-color: rgba(42, 184, 184, 1)
+
