--- a/components/secondpanel/creategroupbtn/creategroupbtn.sass
+++ b/components/secondpanel/creategroupbtn/creategroupbtn.sass
@@ -10,3 +10,17 @@
   text-transform: uppercase
   font-size: 14px
   color: "#fff"
+
+.button-container.button-wrapper
+  display: flex
+  align-items: center
+  border-radius: 50px
+  background-color: #ff6f00
+
+@media screen and (max-width: 960px)
+  .button-container.button-wrapper
+    width: 34px
+    height: 34px
+    min-width: 34px
+    min-height: 34px
+    padding: 0
