--- a/pages/manage-groups/user-activity-chart/user-activity-chart.sass
+++ b/pages/manage-groups/user-activity-chart/user-activity-chart.sass
@@ -35,3 +35,14 @@
     .title-button
       font-family: Muli
       font-size: 14px
+
+@media screen and (max-width: 960px)
+  .user-activity-chart-wrapper
+    .container
+    .title-button
+      width: 34px
+      height: 34px
+      min-width: 34px !important
+      min-height: 34px !important
+      padding: 0
+
