--- a/pages/terms-of-use/style.sass
+++ b/pages/terms-of-use/style.sass
@@ -96,3 +96,11 @@
 
 .privacy-policy-text-container ul
   list-style: initial
+
+@media (max-width:960px)
+  .terms-of-use, .privacy-policy
+    &-text-container
+      padding: 10px 25px
+      background-color: white
+      max-width: 100%
+      margin: 0 auto
