--- a/components/features/features.sass
+++ b/components/features/features.sass
@@ -8,6 +8,7 @@
     display: flex
     justify-content: center
     align-items: center
+    flex-wrap: nowrap
 
     .search-panel-open
       display: none
@@ -186,6 +187,7 @@
       justify-content: flex-start
       padding: 14px
       position: relative
+      flex-wrap: wrap
 
       .search-panel-open
         display: inline-flex
