added responsive for quiz

--- a/components/features/features.sass
+++ b/components/features/features.sass
@@ -215,6 +215,7 @@
       height: 64px
       margin-right: 10px
     .group
+      transform: translateY(-7px)
       .name
         display: inline
         vertical-align: middle
@@ -253,6 +254,8 @@
         line-height: 1.33
         letter-spacing: normal
         color: #5f6368
+        margin: auto
+        width: 100%
         &:before
           border: none
           content: none
@@ -260,6 +263,9 @@
           content: none
           border: none
           position: relative
+    .field-select
+      .field-search-input
+        margin-top: 16px
   .features-wrapper-addition
     display: flex
     justify-content: center
@@ -307,6 +313,8 @@
         line-height: 1.33
         letter-spacing: normal
         color: #5f6368
+        margin: 16px auto auto
+        width: 100%
         &:before
           border: none
           content: none
