--- a/components/QuizProgress/style.sass
+++ b/components/QuizProgress/style.sass
@@ -23,3 +23,34 @@
         font-family: Muli
 .someclass
     background-color: blue
+
+@media screen and (max-width: 960px)
+    .bar
+        width: 100%
+        background-color: #eaeaea
+        box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.04);
+        height: 20px
+        border-radius: 10px
+        text-align: center
+
+        width: 70%
+        position: absolute
+        top: calc(80vw + 160px)
+        transform: translateX(-50%)
+        z-index: 1
+
+        .fill
+            position: absolute
+            top: 0
+            left: 0
+            transition: ease 1s
+            border-radius: 10px;
+            height: 20px
+            background: linear-gradient(to right, #224483, #3866bb)
+        .text
+            z-index: 100000
+            font-size: 11px
+            position: relative
+            color: #748191
+            text-transform: uppercase
+            font-family: Muli
