--- a/components/customTableAdminNewUser/customTableAdminNewUser.sass
+++ b/components/customTableAdminNewUser/customTableAdminNewUser.sass
@@ -1,2 +1,34 @@
 .table-head
   background-color: #e3e2e2
+.table-body
+  .info-button
+    width: 30px
+    height: 30px
+    border-radius: 2px
+    border: 1px grey solid
+    background-color: #f0f4fb
+  .field-select
+    width: 150px
+    text-decoration: none
+    padding: 0px 15px
+    background-color: #f0f4fb
+    border-radius: 2px
+    border: 1px grey solid
+    .field-search-input
+      margin: 0% 0% 0% 30%
+      width: 70%
+      font-family: Muli
+      font-size: 15px
+      font-weight: normal
+      font-style: normal
+      font-stretch: normal
+      line-height: 1.33
+      letter-spacing: normal
+      color: #5f6368
+      &:before
+        border: none
+        content: none
+      &:after
+        content: none
+        border: none
+        position: relative
