--- a/components/groups/gallery/modal.sass
+++ b/components/groups/gallery/modal.sass
@@ -44,6 +44,7 @@
             color: rgba(0,0,0,0.6)
     .close-btn
         position: absolute
+        background-color: #b6bec9
         color: white
         top: 25px
         left: 40px
